[tool.poetry]
name = "retention-chart"
version = "0.1.0"
authors = ["codehia <dev@sacharya.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipython = "7.17"
ipdb = "^0.13"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
